# NeoV1

./: .gitignore  CMakeLists.txt  InputsTest  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  gauravislucky.code-workspace  input.txt  intellisense_test.cpp  output.txt  sys.txt  workspace.code-workspace
CPPConceptsEexamples/: CPPThreads.cpp  ConstAndStaticKeyword.cpp  EraseVectorLastElement.cpp  Friend.cpp  LCAnagram.cpp  LCContainsDup  LCHappyNumber.cpp  LCMajorityNum.cpp  LCMapProblems.cpp  LCRomanToInt.cpp  MapPracticals.cpp  MoveConstructor.cpp  MultiThreads.cpp  SemaphoreRW.cpp  SmartPointerImplementation.cpp  SmartPointers.cpp  SmartPtr.cpp  Sortings.cpp  StackImplementation.cpp  StringPracticals.cpp  VectorExperiments.cpp  VectorLastElementErase.cpp  clean.sh  finalKeyword.cpp  leakCheck.sh  readersWritersProblem.cpp  tempcodeRunner.cpp  threadsCPP.cpp
CPP_StandAlone/: clean.sh
ClassDiagrams/: BuilderClass.drawio  ObjectRelation.drawio
debug/: Main
examples/: BST_Implementation.cpp  ImplementingSmartPointer  MapUsage  MessageQueueWriter.cpp  MoveConstructor.cpp  MultiThreads  MultiThreads.cpp  PaddingStruct.cpp  PreventInheritance  Semaphore.cpp  SharedMemory.h  SmartPtr  Sortings.cpp  VectorExperiments  VectorExperiments.cpp  bind_Function_Algorithm.cpp  bitManipulation.cpp  castingTest  castingTest.cpp  constTesting  exceptionHandler  finalKeyword  finalKeyword.cpp  leakCheck.sh  stringToInt.cpp  tempCodeRunnerFile.cpp
include/: AbstractFactoryMethod.h  AdapterDesign.h  BuilderClass.h  DecoratorPattern.h  FacadePattern.h  MoveCtr.h  ObjectRelations.h  (+3 more)
(+218 files in other folders)
